@@ -1,5 +1,5 @@
 This package was debianized by: Jordi Sayol <g.sayol@yahoo.es>
-on Thu, 27 Jan 2011 15:18:03 +0100
+on Sat, 05 Mar 2011 23:10:51 +0100
 
 It was downloaded from: http://brlcad.org/
 
