@@ -1,4 +1,5 @@
-debian/application-x-brlcad.png
+debian/application-x-brlcad-v4.png
+debian/application-x-brlcad-v5.png
 debian/brlcad-archer.png
 debian/brlcad-db.png
 debian/brlcad-doc.png
